[tool.poetry]
name = "corrective-rag"
version = "0.1.0"
description = ""
authors = ["Rajat Nigam <rajatnigam89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.35"
black = "^24.10.0"
langchain = "^0.3.3"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.2"
beautifulsoup4 = "^4.12.3"
openai = "^1.51.2"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.2"
pygraphviz = "^1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
